--- a/package.json
+++ b/package.json
@@ -1,11 +1,19 @@
 {
-  "name": "ai-chatbot",
-  "version": "3.0.23",
+  "name": "ai-chatbot-desktop",
+  "version": "0.1.0",
   "private": true,
+  "type": "module",
+  "main": "./.electron/main.js",
   "scripts": {
     "dev": "next dev --turbo",
     "build": "tsx lib/db/migrate && next build",
     "start": "next start",
+    "dev:e": "tsc-watch --noClear --onFirstSuccess 'electron .' --project ./electron",
+    "dev:e:debug-brk": "tsc-watch --noClear --onFirstSuccess 'electron --inspect-brk .' --project ./electron",
+    "build:e": "tsc --project ./electron && electron-builder --mac",
+    "start:e": "electron .",
+    "open": "./dist/mac-arm64/Chatbot\\ AI\\ SDK\\ for\\ Desktop.app/Contents/MacOS/Chatbot\\ AI\\ SDK\\ for\\ Desktop",
+    "clean": "rm -rf .next .electron dist",
     "lint": "next lint && biome lint --write --unsafe",
     "lint:fix": "next lint --fix && biome lint --write --unsafe",
     "format": "biome format --write",
@@ -18,7 +26,32 @@
     "db:up": "drizzle-kit up",
     "test": "export PLAYWRIGHT=True && pnpm exec playwright test"
   },
+  "build": {
+    "appId": "chat-sdk.ai-desktop",
+    "asar": true,
+    "productName": "Chatbot AI SDK for Desktop",
+    "files": [
+      "next.config.js",
+      ".next/**",
+      "public/**",
+      "node_modules/**",
+      ".electron/**",
+      "package.json",
+      ".env"
+    ],
+    "mac": {
+      "target": "dmg",
+      "category": "public.app-category.productivity",
+      "icon": "public/icons/chatbot.png",
+      "hardenedRuntime": true,
+      "gatekeeperAssess": false,
+      "extendInfo": {
+        "CFBundleName": "Chatbot AI SDK for Desktop"
+      }
+    }
+  },
   "dependencies": {
+    "@ai-sdk/anthropic": "^1.2.9",
     "@ai-sdk/react": "^1.2.11",
     "@ai-sdk/xai": "^1.2.15",
     "@codemirror/lang-javascript": "^6.2.2",
@@ -26,23 +59,28 @@
     "@codemirror/state": "^6.5.0",
     "@codemirror/theme-one-dark": "^6.1.2",
     "@codemirror/view": "^6.35.3",
+    "@daytonaio/sdk": "^0.20.2",
     "@opentelemetry/api": "^1.9.0",
     "@opentelemetry/api-logs": "^0.200.0",
     "@radix-ui/react-alert-dialog": "^1.1.2",
-    "@radix-ui/react-dialog": "^1.1.2",
+    "@radix-ui/react-dialog": "^1.1.11",
     "@radix-ui/react-dropdown-menu": "^2.1.2",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-label": "^2.1.0",
-    "@radix-ui/react-select": "^2.1.2",
+    "@radix-ui/react-radio-group": "^1.3.6",
+    "@radix-ui/react-select": "^2.2.4",
     "@radix-ui/react-separator": "^1.1.0",
-    "@radix-ui/react-slot": "^1.1.0",
+    "@radix-ui/react-slot": "^1.2.2",
+    "@radix-ui/react-switch": "^1.2.4",
     "@radix-ui/react-tooltip": "^1.1.3",
     "@radix-ui/react-visually-hidden": "^1.1.0",
     "@vercel/analytics": "^1.3.1",
     "@vercel/blob": "^0.24.1",
     "@vercel/functions": "^2.0.0",
+    "@vercel/mcp-adapter": "^0.4.1",
     "@vercel/otel": "^1.12.0",
     "@vercel/postgres": "^0.10.0",
+    "a-calc": "^2.2.14",
     "ai": "4.3.13",
     "bcrypt-ts": "^5.0.2",
     "class-variance-authority": "^0.7.0",
@@ -53,7 +91,9 @@
     "diff-match-patch": "^1.0.5",
     "dotenv": "^16.4.5",
     "drizzle-orm": "^0.34.0",
+    "electron-default-menu": "^1.0.2",
     "fast-deep-equal": "^3.1.3",
+    "fast-fuzzy": "^1.12.0",
     "framer-motion": "^11.3.19",
     "geist": "^1.3.1",
     "lucide-react": "^0.446.0",
@@ -90,6 +130,7 @@
   },
   "devDependencies": {
     "@biomejs/biome": "1.9.4",
+    "@modelcontextprotocol/sdk": "1.10.2",
     "@playwright/test": "^1.50.1",
     "@tailwindcss/typography": "^0.5.15",
     "@types/d3-scale": "^4.0.8",
@@ -99,6 +140,8 @@
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "drizzle-kit": "^0.25.0",
+    "electron": "^36.3.2",
+    "electron-builder": "^26.0.12",
     "eslint": "^8.57.0",
     "eslint-config-next": "14.2.5",
     "eslint-config-prettier": "^9.1.0",
@@ -106,8 +149,23 @@
     "eslint-plugin-tailwindcss": "^3.17.5",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
+    "tsc-watch": "^6.2.1",
     "tsx": "^4.19.1",
     "typescript": "^5.6.3"
   },
-  "packageManager": "pnpm@9.12.3"
+  "engines": {
+    "node": ">=22.0.0"
+  },
+  "packageManager": "pnpm@10.6.5+sha1.da220e966c2db3275efb5928cf8f3592681b106b",
+  "pnpm": {
+    "onlyBuiltDependencies": [
+      "@biomejs/biome",
+      "bufferutil",
+      "electron",
+      "electron-winstaller",
+      "esbuild",
+      "sharp",
+      "unrs-resolver"
+    ]
+  }
 }
