feat: support ollama

--- a/.env.example
+++ b/.env.example
@@ -13,12 +13,14 @@ XAI_API_KEY=****
 # Get your Anthropic API Key here: https://console.anthropic.com/
 ANTHROPIC_API_KEY=****
 
+# OLLMA models can be found here: https://ollama.com/models. Please make sure that choose the model support tools
+OLLAMA_CHAT_MODEL=****
+
 # Instructions to create a Vercel Blob Store here: https://vercel.com/docs/storage/vercel-blob
 BLOB_READ_WRITE_TOKEN=****
 
 # Instructions to create a PostgreSQL database here: https://vercel.com/docs/storage/vercel-postgres/quickstart
 POSTGRES_URL=****
-
 
 # Instructions to create a Redis store here:
 # https://vercel.com/docs/redis
